--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "4.2.0",
     "@openzeppelin/hardhat-upgrades": "^1.11.0",
+    "@typechain/ethers-v5": "^8.0.2",
+    "@typechain/hardhat": "^3.0.0",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
     "hardhat": "2.5.0",
     "solc-0.8.6": "npm:solc@0.8.6",
-    "solidity-docgen": "^0.5.16"
+    "solidity-docgen": "^0.5.16",
+    "typechain": "^6.0.2"
   },
   "scripts": {
     "build": "hardhat compile --config hardhat.config.js",
