use ts for hardhat

--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
     "@openzeppelin/hardhat-upgrades": "^1.11.0",
     "@typechain/ethers-v5": "^8.0.3",
     "@typechain/hardhat": "^3.0.0",
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
     "hardhat": "2.5.0",
+    "mocha": "^9.1.3",
     "mocha-chai-jest-snapshot": "^1.1.3",
     "solc-0.8.6": "npm:solc@0.8.6",
     "solidity-docgen": "^0.5.16",
+    "ts-generator": "^0.1.1",
+    "ts-node": "^10.4.0",
     "typechain": "^6.0.3",
     "typescript": "^4.5.2"
   },
   "scripts": {
-    "build": "hardhat compile --config hardhat.config.js",
-    "cleanbuild": "hardhat clean && hardhat compile --config hardhat.config.js",
+    "build": "hardhat compile --config hardhat.config.ts",
+    "cleanbuild": "hardhat clean && hardhat compile --config hardhat.config.ts",
     "test": "hardhat test",
     "deploy": "hardhat run scripts/deploy.js",
     "docgen": "solidity-docgen --solc-module solc-0.8.6 -t ./templates"
