--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "4.2.0",
+    "@openzeppelin/contracts": "^4.3.3",
     "@openzeppelin/contracts-upgradeable": "^4.3.3",
     "@openzeppelin/hardhat-upgrades": "^1.11.0",
     "@typechain/ethers-v5": "^8.0.3",
@@ -16,7 +16,7 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
-    "hardhat": "2.5.0",
+    "hardhat": "2.6.8",
     "mocha": "^9.1.3",
     "mocha-chai-jest-snapshot": "^1.1.3",
     "solc-0.8.6": "npm:solc@0.8.6",
