Use swc in ts-node to make tests run much faster. https://github.com/nomiclabs/hardhat/issues/1219\#issuecomment-909457916

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,9 @@
     "types": ["@nomiclabs/hardhat-ethers", "@nomiclabs/hardhat-waffle"]
   },
   "include": ["./scripts", "./test", "./typechain"],
-  "files": ["./hardhat.config.ts"]
+  "files": ["./hardhat.config.ts"],
+  "ts-node": {
+    "transpileOnly": true,
+    "transpiler": "ts-node/transpilers/swc-experimental"
+  }
 }
