--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@openzeppelin/contracts": "^4.3.3",
     "@openzeppelin/contracts-upgradeable": "^4.3.3",
     "@openzeppelin/hardhat-upgrades": "^1.11.0",
+    "@swc/core": "^1.2.111",
+    "@swc/helpers": "^0.2.14",
     "@typechain/ethers-v5": "^8.0.3",
     "@typechain/hardhat": "^3.0.0",
     "@types/chai": "^4.2.22",
@@ -19,6 +21,7 @@
     "hardhat": "2.6.8",
     "mocha": "^9.1.3",
     "mocha-chai-jest-snapshot": "^1.1.3",
+    "regenerator-runtime": "^0.13.9",
     "solc-0.8.6": "npm:solc@0.8.6",
     "solidity-docgen": "^0.5.16",
     "ts-generator": "^0.1.1",
