--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "build": "hardhat compile --config hardhat.config.ts",
     "cleanbuild": "hardhat clean && hardhat compile --config hardhat.config.ts",
     "test": "hardhat --network hardhat test",
+    "chain:local": "BLOCKCHAIN_NAME=local node scripts/set-chain-config.js",
     "chain:eth": "BLOCKCHAIN_NAME=eth node scripts/set-chain-config.js",
     "chain:bsc": "BLOCKCHAIN_NAME=bsc node scripts/set-chain-config.js",
     "chain:cfx": "BLOCKCHAIN_NAME=cfx node scripts/set-chain-config.js",
