--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 .DS_Store
 
-node_modules
-.openzeppelin
+/node_modules
+/.openzeppelin
 
-cache
-artifacts
-typechain
-deploys
-docs
+/cache
+/artifacts
+/typechain
+/deploys
+/docs
 
-contracts/MesonConfig.sol
+/contracts/MesonConfig.sol
