--- a/package.json
+++ b/package.json
@@ -2,8 +2,22 @@
   "name": "meson-contracts-solidity",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "private": true,
+  "scripts": {
+    "build": "hardhat compile --config hardhat.config.ts",
+    "cleanbuild": "hardhat clean && hardhat compile --config hardhat.config.ts",
+    "test": "hardhat --network hardhat test",
+    "chain:local": "BLOCKCHAIN_NAME=local node scripts/set-chain-config.js",
+    "chain:eth": "BLOCKCHAIN_NAME=eth node scripts/set-chain-config.js",
+    "chain:bsc": "BLOCKCHAIN_NAME=bsc node scripts/set-chain-config.js",
+    "chain:cfx": "BLOCKCHAIN_NAME=cfx node scripts/set-chain-config.js",
+    "chain:one": "BLOCKCHAIN_NAME=one node scripts/set-chain-config.js",
+    "deploy": "hardhat run scripts/deploy-upgradable.js",
+    "upgrade": "hardhat run scripts/upgrade.js",
+    "docgen": "solidity-docgen --solc-module solc -t ./templates"
+  },
   "devDependencies": {
+    "@meson/sdk": "0.1.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.3",
@@ -29,17 +43,7 @@
     "typechain": "^6.0.3",
     "typescript": "^4.5.2"
   },
-  "scripts": {
-    "build": "hardhat compile --config hardhat.config.ts",
-    "cleanbuild": "hardhat clean && hardhat compile --config hardhat.config.ts",
-    "test": "hardhat --network hardhat test",
-    "chain:local": "BLOCKCHAIN_NAME=local node scripts/set-chain-config.js",
-    "chain:eth": "BLOCKCHAIN_NAME=eth node scripts/set-chain-config.js",
-    "chain:bsc": "BLOCKCHAIN_NAME=bsc node scripts/set-chain-config.js",
-    "chain:cfx": "BLOCKCHAIN_NAME=cfx node scripts/set-chain-config.js",
-    "chain:one": "BLOCKCHAIN_NAME=one node scripts/set-chain-config.js",
-    "deploy": "hardhat run scripts/deploy-upgradable.js",
-    "upgrade": "hardhat run scripts/upgrade.js",
-    "docgen": "solidity-docgen --solc-module solc -t ./templates"
-  }
+  "workspaces": [
+    "packages/*"
+  ]
 }
