--- a/packages/contract-abis/package.json
+++ b/packages/contract-abis/package.json
@@ -2,7 +2,7 @@
   "name": "@meson/contract-abis",
   "version": "0.1.0",
   "description": "",
-  "main": "abis/index.js",
+  "main": "abis/index.ts",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
