import from @ethersproject/*

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -7,7 +7,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "peerDependencies": {
-    "ethers": "5"
+  "dependencies": {
+    "@ethersproject/abi": "^5.5.0",
+    "@ethersproject/abstract-signer": "^5.5.0",
+    "@ethersproject/bytes": "^5.5.0",
+    "@ethersproject/contracts": "^5.5.0",
+    "@ethersproject/hash": "^5.5.0",
+    "@ethersproject/keccak256": "^5.5.0",
+    "@ethersproject/transactions": "^5.5.0",
+    "@ethersproject/wallet": "^5.5.0"
   }
 }
