--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -8,11 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@ethersproject/abstract-signer": "^5.5.0",
-    "@ethersproject/bytes": "^5.5.0",
-    "@ethersproject/contracts": "^5.5.0",
-    "@ethersproject/hash": "^5.5.0",
-    "@ethersproject/transactions": "^5.5.0",
-    "@ethersproject/wallet": "^5.5.0"
+    "@ethersproject/abstract-signer": "5.5.0",
+    "@ethersproject/bytes": "5.5.0",
+    "@ethersproject/contracts": "5.5.0",
+    "@ethersproject/hash": "5.5.0",
+    "@ethersproject/transactions": "5.5.0",
+    "@ethersproject/wallet": "5.5.0"
   }
 }
