--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -2,10 +2,15 @@
   "name": "@meson/sdk",
   "version": "0.1.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
+    "postinstall": "npx tsc",
+    "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "@ethersproject/abstract-signer": "5.5.0",
