--- a/packages/contract-types/tsconfig.json
+++ b/packages/contract-types/tsconfig.json
@@ -5,6 +5,7 @@
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist",
+    "declaration": true,
     "resolveJsonModule": true,
     "typeRoots": ["./node_modules/@types"]
   },
