--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "lib",
+    "src",
     "tsconfig.json"
   ],
   "scripts": {
