--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "docgen": "solidity-docgen --solc-module solc -t ./templates"
   },
   "devDependencies": {
-    "@meson/sdk": "0.1.0",
     "@meson/contract-abis": "0.1.0",
     "@meson/contract-types": "0.1.0",
+    "@meson/presets": "0.1.0",
+    "@meson/sdk": "0.1.0",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.1",
