--- a/packages/contract-abis/package.json
+++ b/packages/contract-abis/package.json
@@ -3,8 +3,5 @@
   "version": "0.1.0",
   "description": "",
   "main": "abis/index.js",
-  "license": "MIT",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  "license": "MIT"
 }
