--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -10,8 +10,7 @@
     "tsconfig.json"
   ],
   "scripts": {
-    "build": "npx tsc",
-    "postinstall": "yarn build"
+    "build": "tsc"
   },
   "dependencies": {
     "@ethersproject/abstract-signer": "5.5.0",
