rename to @mesonfi

--- a/packages/contract-abis/package.json
+++ b/packages/contract-abis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@meson/contract-abis",
+  "name": "@mesonfi/contract-abis",
   "version": "0.1.0",
   "description": "",
   "main": "abis/index.js",
