--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "description": "",
   "license": "MIT",
+  "repository":"https://github.com/MesonFi/meson-contracts-solidity",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "files": [
     "src",
     "tsconfig.json"
