--- a/packages/presets/tsconfig.json
+++ b/packages/presets/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "strict": false,
     "esModuleInterop": true,
-    "outDir": "dist",
+    "outDir": "lib",
     "declaration": true,
     "resolveJsonModule": true,
     "typeRoots": ["./node_modules/@types"]
