change network on the run

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "chain:bsc": "NETWORK_ID=bsc yarn chain",
     "chain:cfx": "NETWORK_ID=cfx yarn chain",
     "chain:one": "NETWORK_ID=one yarn chain",
-    "deploy-testnet": "yarn chain && hardhat --network ropsten run scripts/deploy-testnet.js",
+    "deploy-testnet": "yarn chain && hardhat run scripts/deploy-testnet.js",
     "deploy:eth": "NETWORK_ID=mainnet yarn deploy-testnet",
-    "deploy:bsc": "NETWORK_ID=mainnet yarn deploy-testnet",
-    "deploy:cfx": "NETWORK_ID=mainnet yarn deploy-testnet",
+    "deploy:bsc": "NETWORK_ID=bsc yarn deploy-testnet",
+    "deploy:cfx": "NETWORK_ID=cfx yarn deploy-testnet",
     "upgrade": "hardhat run scripts/upgrade.js",
     "docgen": "solidity-docgen --solc-module solc -t ./templates",
     "publish": "npm publish --workspaces"
@@ -41,6 +41,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
     "hardhat": "2.8.0",
+    "hardhat-change-network": "^0.0.7",
     "mocha": "^9.1.3",
     "mocha-chai-jest-snapshot": "^1.1.3",
     "regenerator-runtime": "^0.13.9",
