--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "publish": "npm publish --workspaces"
   },
   "devDependencies": {
-    "@mesonfi/contract-abis": "0.1.2",
-    "@mesonfi/contract-types": "0.1.1",
-    "@mesonfi/presets": "0.1.6",
-    "@mesonfi/sdk": "0.1.0",
+    "@mesonfi/contract-abis": "^0.1.0",
+    "@mesonfi/contract-types": "^0.1.0",
+    "@mesonfi/presets": "^0.1.0",
+    "@mesonfi/sdk": "^0.1.0",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.1",
