add more deploy scripts

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "deploy-testnet": "yarn chain && hardhat run scripts/deploy-testnet.js",
     "deploy:eth": "NETWORK_ID=mainnet yarn deploy-testnet",
     "deploy:bsc": "NETWORK_ID=bsc yarn deploy-testnet",
+    "deploy:ftm": "NETWORK_ID=ftm yarn deploy-testnet",
+    "deploy:poly": "NETWORK_ID=polygon yarn deploy-testnet",
+    "deploy:avax": "NETWORK_ID=avax yarn deploy-testnet",
+    "deploy:one": "NETWORK_ID=one yarn deploy-testnet",
     "deploy:cfx": "NETWORK_ID=cfx yarn deploy-testnet",
     "upgrade": "hardhat run scripts/upgrade.js",
     "docgen": "solidity-docgen --solc-module solc -t ./templates",
