add postbuild script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "build": "hardhat compile --config hardhat.config.ts",
-    "cleanbuild": "hardhat clean && hardhat compile --config hardhat.config.ts",
+    "postbuild": "cp artifacts/contracts/Meson.sol/Meson.json packages/contract-abis/abis/Meson.json",
+    "cleanbuild": "hardhat clean && yarn build",
     "test": "hardhat --network hardhat test",
     "chain": "node scripts/set-chain-config.js",
     "chain:local": "NETWORK_ID=local yarn chain",
