--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "hardhat compile --config hardhat.config.ts",
     "postbuild": "cp artifacts/contracts/Meson.sol/Meson.json packages/contract-abis/abis/Meson.json",
     "cleanbuild": "hardhat clean && yarn build",
-    "estimate": "hardhat run scripts/estimate-gas.js",
+    "estimate": "hardhat --network hardhat run scripts/estimate-gas.js",
     "test": "hardhat --network hardhat test",
     "chain": "node scripts/set-chain-config.js",
     "chain:local": "NETWORK_ID=local yarn chain",
