--- a/config.json
+++ b/config.json
@@ -6,7 +6,10 @@
   "compilers": {
     "solc": "0.8.6",
     "truffle": "",
-    "evmVersion": "istanbul"
+    "evmVersion": "istanbul",
+    "optimizer": {
+      "enabled": false
+    }
   },
   "linter": "solhint",
   "editor": {
