--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ethersproject/abstract-signer": "5.5.0",
     "@ethersproject/hash": "5.5.0",
+    "@ethersproject/keccak256": "5.5.0",
     "@ethersproject/transactions": "5.5.0",
     "@ethersproject/wallet": "5.5.0",
     "@mesonfi/contract-types": "^0.2.1"
