--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@ethersproject/abstract-signer": "5.5.0",
+    "@ethersproject/bytes": "5.5.0",
     "@ethersproject/hash": "5.5.0",
     "@ethersproject/keccak256": "5.5.0",
+    "@ethersproject/solidity": "5.5.0",
     "@ethersproject/transactions": "5.5.0",
     "@ethersproject/wallet": "5.5.0",
     "@mesonfi/contract-types": "^0.2.1"
