--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ethersproject/bignumber": "5.5.0",
     "@ethersproject/bytes": "5.5.0",
+    "@ethersproject/constants": "5.5.0",
     "@ethersproject/keccak256": "5.5.0",
     "@ethersproject/solidity": "5.5.0",
     "@ethersproject/transactions": "5.5.0",
