Update package.json scripts

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "hardhat compile --config hardhat.config.ts",
     "postbuild": "cp artifacts/contracts/Meson.sol/Meson.json packages/contract-abis/abis/Meson.json",
     "cleanbuild": "hardhat clean && yarn build",
+    "docgen": "solidity-docgen --solc-module solc -t ./templates",
+    "test": "hardhat --network hardhat test",
     "estimate": "hardhat --network hardhat run scripts/estimate-gas.js",
     "estimate2": "hardhat --network hardhat run scripts/estimate-gas-upgradable.js",
-    "test": "hardhat --network hardhat test",
 
     "chain": "node scripts/set-chain-config.js",
     "chain:local": "NETWORK_ID=local yarn chain",
@@ -18,26 +19,28 @@
     "chain:cfx": "NETWORK_ID=cfx yarn chain",
     "chain:one": "NETWORK_ID=one yarn chain",
 
-    "deploy": "yarn chain && hardhat run scripts/deploy-upgradable.js",
-    "deploy:eth": "NETWORK_ID=mainnet yarn deploy",
-    "deploy:bsc": "NETWORK_ID=bsc yarn deploy",
-    "deploy:ftm": "NETWORK_ID=ftm yarn deploy",
-    "deploy:poly": "NETWORK_ID=polygon yarn deploy",
-    "deploy:avax": "NETWORK_ID=avax yarn deploy",
-    "deploy:one": "NETWORK_ID=one yarn deploy",
-    "deploy:cfx": "NETWORK_ID=cfx yarn deploy",
+    "testnet": "yarn chain && hardhat run scripts/testnets/deploy-upgradable.js",
+    "testnet:eth": "NETWORK_ID=mainnet yarn testnet",
+    "testnet:bsc": "NETWORK_ID=bsc yarn testnet",
+    "testnet:avax": "NETWORK_ID=avax yarn testnet",
+    "testnet:poly": "NETWORK_ID=polygon yarn testnet",
+    "testnet:ftm": "NETWORK_ID=ftm yarn testnet",
+    "testnet:one": "NETWORK_ID=one yarn testnet",
 
-    "up": "yarn chain && hardhat run scripts/upgrade.js",
+    "up": "yarn chain && hardhat run scripts/testnets/upgrade.js",
     "up:eth": "NETWORK_ID=mainnet yarn up",
     "up:bsc": "NETWORK_ID=bsc yarn up",
-    "up:ftm": "NETWORK_ID=ftm yarn up",
-    "up:poly": "NETWORK_ID=polygon yarn up",
     "up:avax": "NETWORK_ID=avax yarn up",
+    "up:poly": "NETWORK_ID=polygon yarn up",
+    "up:ftm": "NETWORK_ID=ftm yarn up",
     "up:one": "NETWORK_ID=one yarn up",
-    "up:cfx": "NETWORK_ID=cfx yarn up",
 
-    "docgen": "solidity-docgen --solc-module solc -t ./templates",
-    "publish": "npm publish --workspaces"
+    "deploy": "yarn chain && hardhat run scripts/mainnets/deploy.js",
+    "deploy:eth": "NETWORK_ID=mainnet yarn deploy",
+    "deploy:bsc": "NETWORK_ID=bsc yarn deploy",
+    "deploy:avax": "NETWORK_ID=avax yarn deploy",
+    "deploy:poly": "NETWORK_ID=polygon yarn deploy",
+    "deploy:ftm": "NETWORK_ID=ftm yarn deploy"
   },
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.4.0",
