--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -14,6 +14,7 @@
     "tsconfig.json"
   ],
   "scripts": {
+    "test": "mocha -r ts-node/register 'tests/**/*.spec.ts'",
     "build": "tsc",
     "prepare": "yarn build"
   },
@@ -28,6 +29,11 @@
     "@mesonfi/contract-types": "^0.4.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "chai": "^4.3.6",
+    "mocha": "^9.2.1",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.4"
   }
 }
