--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -32,8 +32,11 @@
     "@ethersproject/contracts": "5.5.0",
     "@mesonfi/contract-abis": "^0.4.3",
     "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^9.1.0",
     "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "ethereum-waffle": "^3.4.0",
     "mocha": "^9.2.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.4"
