--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "private": true,
   "scripts": {
     "build": "hardhat compile --config hardhat.config.ts",
-    "postbuild": "cp artifacts/contracts/Meson.sol/Meson.json packages/contract-abis/abis/Meson.json",
+    "postbuild": "cp artifacts/contracts/Meson.sol/Meson.json packages/contract-abis/abis/Meson.json && cp artifacts/contracts/test/MockToken.sol/MockToken.json packages/contract-abis/abis/ERC20.json",
     "cleanbuild": "hardhat clean && yarn build",
     "docgen": "solidity-docgen --solc-module solc -t ./templates",
-    "test": "set TESTNET_MODE=true && set NETWORK_ID=ropsten&& yarn chain && hardhat --network hardhat test",
+    "test": "TESTNET_MODE=true NETWORK_ID=ropsten yarn chain && hardhat --network hardhat test",
     "estimate": "hardhat --network hardhat run scripts/estimate-gas.js",
     "estimate2": "hardhat --network hardhat run scripts/estimate-gas-upgradable.js",
 
     "chain": "node scripts/set-chain-config.js",
-    "chain:local": "set NETWORK_ID=local&&yarn chain",
+    "chain:local": "NETWORK_ID=local&&yarn chain",
     "chain:eth": "NETWORK_ID=ropsten yarn chain",
     "chain:bsc": "NETWORK_ID=bsc yarn chain",
     "chain:avax": "NETWORK_ID=avax yarn chain",
