--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "estimate2": "hardhat --network hardhat run scripts/estimate-gas-upgradable.js",
 
     "chain": "node scripts/set-chain-config.js",
-    "chain:local": "NETWORK_ID=local&&yarn chain",
+    "chain:local": "NETWORK_ID=local yarn chain",
     "chain:eth": "NETWORK_ID=ropsten yarn chain",
     "chain:bsc": "NETWORK_ID=bsc yarn chain",
     "chain:avax": "NETWORK_ID=avax yarn chain",
